--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap'); 
+
+body {
+  font-family: var(--font-family);
+  background-color: var(--very-light-gray);
+}
+
 :root {
   --dark-blue-elements: hsl(209, 23%, 22%);
   --very-dark-blue-background: hsl(207, 26%, 17%);
